--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider expo start",
+    "android": "cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --android",
+    "ios": "cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
+    "web": "cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "cross-env": "^7.0.3"
   },
   "private": true
 }
